# yao-rs

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/skills/: plan-review.md  review-implementation.md
.claude/skills/review-implementation/: SKILL.md
.github/workflows/: ci.yml  docs.yml
benches/: density.rs  gates.rs  qft.rs
benchmarks/: compare.py
benchmarks/julia/: Project.toml  generate_ground_truth.jl
bitbasis/: Cargo.toml
bitbasis/src/: bit_ops.rs  bitstr.rs  iterate_control.rs  lib.rs
docs/: book.toml
docs/plans/: 2026-03-01-noise-model-design.md  2026-03-01-noise-model-implementation.md  2026-03-02-qubit-simulation-design.md  2026-03-02-qubit-simulation-implementation.md
docs/src/: SUMMARY.md  cli.md  conventions.md  getting-started.md  introduction.md  states.md
docs/src/examples/: ancilla-protocols.md  bernstein-vazirani.md  catalog.md  entangled-states.md  grover-search.md  phase-estimation.md  qaoa-maxcut.md  qcbm.md  qft.md  vqe.md
docs/src/static/: module-graph.js  module-graph.json
docs/superpowers/plans/: 2026-04-19-cli-example-pages.md  2026-04-19-cli-example-visualization.md
docs/superpowers/specs/: 2026-04-01-yaosim-design.md  2026-04-01-yaosim-tbd.md  2026-04-08-benchmark-suite-design.md  2026-04-19-cli-example-visualization-design.md
examples/: circuit_svg.rs  profile_bench.rs  qft.rs  vqe.rs
examples/cli/: bernstein_vazirani.sh  generate_artifacts.sh  grover_marked_state.sh  hadamard_test_z.sh  lib.sh  phase_estimation_z.sh  qaoa_maxcut_line4.sh  qcbm_static.sh  qft_from_plus.sh  swap_test.sh
scripts/: Project.toml  gen_module_graph.py  generate_instruct_test_data.jl  plot_cli_results.py  reference_simulate.py
src/: ad.rs  apply.rs  bitutils.rs  circuit.rs  contractor.rs  density_matrix.rs  easybuild.rs  einsum.rs  expect.rs  gate.rs  index.rs  instruct.rs  instruct_qubit.rs  json.rs  lib.rs  measure.rs  noise.rs  operator.rs  register.rs  state.rs  svg.rs  tensors.rs  torch_contractor.rs
src/unit_tests/: ad.rs  bitutils.rs  circuit.rs  circuit_noise.rs  contractor.rs  easybuild.rs  gate.rs  index.rs  instruct.rs  instruct_qubit.rs  json.rs  noise.rs  operator.rs  state.rs  svg.rs  tensors.rs
tests/: bitutils.rs  circuit_noise.rs  einsum_dm.rs  instruct_qubit.rs  main.rs  measure.rs  noise.rs
tests/common/: benchmark_data.rs  mod.rs
tests/data/: instruct.json  noise.json
tests/fixtures/: generate_noise.jl
tests/suites/: ad.rs  apply.rs  benchmark_validation.rs  einsum.rs  einsum_dm.rs  gate.rs  integration.rs  measure.rs  torch_contractor.rs
visualization/: example-basic.json  example-qft.json
yao-cli/: Cargo.toml
yao-cli/src/: cli.rs  main.rs  operator_parser.rs  output.rs  state_io.rs  tn_dto.rs
yao-cli/src/commands/: contract.rs  example.rs  expect.rs  inspect.rs  measure.rs  mod.rs  optimize.rs  probs.rs  run.rs  simulate.rs  toeinsum.rs  visualize.rs
yao-cli/tests/: integration.rs  pipeline.rs
