[workspace]
members = ["yao-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[package]
name = "yao-rs"
version.workspace = true
edition.workspace = true

[features]
default = []
parallel = ["rayon"]
torch = ["tch"]
typst = ["dep:typst-as-lib", "dep:typst-pdf", "dep:typst"]

[dependencies]
num-complex = { version = "0.4", features = ["serde"] }
ndarray = "0.16"
omeco = "0.1"
rand = "0.8"
rayon = { version = "1.10", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tch = { version = "0.18", optional = true }
typst = { version = "0.14", optional = true }
typst-as-lib = { version = "0.15", optional = true, features = ["packages", "typst-kit-fonts", "ureq"] }
typst-pdf = { version = "0.14", optional = true }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "apply"
harness = false

[[example]]
name = "circuit_pdf"
required-features = ["typst"]
