[workspace]
members = ["yao-cli", "bitbasis"]
exclude = ["omeinsum-rs"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[package]
name = "yao-rs"
version.workspace = true
edition.workspace = true

[features]
default = []
parallel = ["rayon"]
torch = ["tch"]
omeinsum = ["dep:omeinsum"]
qasm = ["dep:openqasm"]

[dependencies]
bitbasis = { path = "bitbasis" }
num-complex = { version = "0.4", features = ["serde"] }
faer = "0.24"
ndarray = "0.17"
omeco = "0.2"
omeinsum = { path = "omeinsum-rs", optional = true }
rand = "0.10"
rayon = { version = "1.10", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
openqasm = { version = "0.1", optional = true }
tch = { version = "0.18", optional = true }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "apply"
harness = false

[[bench]]
name = "gates"
harness = false

[[bench]]
name = "qft"
harness = false

[[bench]]
name = "density"
harness = false

[[example]]
name = "circuit_svg"
