[package]
name = "yao-cli"
version.workspace = true
edition.workspace = true
description = "CLI tool for yao-rs quantum circuit simulation"

[[bin]]
name = "yao"
path = "src/main.rs"

[features]
default = []
typst = ["yao-rs/typst"]

[dependencies]
yao-rs = { path = "..", default-features = false }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
ndarray = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = { version = "4", features = ["supports-colors"] }
num-complex = "0.4"
rand = "0.8"
