[package]
name = "yao-cli"
version.workspace = true
edition.workspace = true
description = "CLI tool for yao-rs quantum circuit simulation"

[[bin]]
name = "yao"
path = "src/main.rs"

[features]
default = ["qasm", "omeinsum"]
qasm = ["yao-rs/qasm"]
omeinsum = ["yao-rs/omeinsum"]

[dependencies]
yao-rs = { path = "..", default-features = false }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
ndarray = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = { version = "4", features = ["supports-colors"] }
num-complex = "0.4"
omeco = "0.2"
rand = "0.10"

[dev-dependencies]
assert_cmd = "2"
serde_json = "1"
